[package]
name = "goofy-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.19"
system_shutdown = "*"
sys-mount = "2.0.2"


[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"